更新依赖到最新版本